# quanzhen-night-journal

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOY_EXAMPLE.md  DEPLOY_FINAL_CHECKLIST.md  DEPLOY_GUIDE.md  DEPLOY_SOP.md  HUGO_TROUBLESHOOTING.md  LICENSE  MIGRATION.md  README.en.md  README.md  RELEASE_NOTES_v1.0.5.md  docker-compose.yml  hugo.toml  install.sh  pyproject.toml  setup.sh
.github/: pull_request_template.md
automation/: NEXT_STEPS.md  README-night-journal.md  README-overrides.md  README-system.md  REQUIREMENTS.md  emotion_pool.json  event_map_rules.json  future_fragments.json  imagery_pool.json  manual_overrides.json  memory_anchors.json  night-journal.service  night-journal.timer  night_journal_stats.example.json  night_journal_stats.json  recent_memories.json  scene_pool.json  topic_rules.json  world_state.example.json  world_state.json
backend/: Dockerfile  __init__.py  config.py  database.py  main.py
caddy/: Caddyfile  Caddyfile.blog-preview  Caddyfile.preview  Dockerfile  entrypoint.sh
content/: about.md  archives.md  offline.md  search.md
data/: Caddyfile  hugo.toml
doc/: #U5168#U771f#U591c#U8bb0_#U9879#U76ee#U603b#U7eb2.md  #U5de5#U7a0b#U5b9e#U65bd#U6587#U6863.md  database_migration.md  database_schema.sql  人格运行体检与改进方案-2026-07.md  全面审阅报告-2026-07-10.md  剩余改进实施方案-2FA-错误码-自动备份-编辑页i18n.md  博客展示页优化方案-预览站.md  工程实施文档.md  待修复问题清单-P1-P2.md  新VPS开发环境交接.md  项目总纲.md
docs/: architecture.md  deployment.md  review-workflow.md
draft_review/: 20260325-044827-night-note.md  20260325-143741-night-note.md  (+1 more)
(+355 files in other folders)
