[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quanzhen-night-journal"
version = "2.0.0"
description = "全真夜记 - 可控、可解释、可迁移的数字生命博客系统"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "apscheduler>=3.10.4",
    "bcrypt>=4.1.3",
    "cryptography>=44.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "psutil>=7.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.8.0",
    "PyJWT>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.38",
    "uvicorn[standard]>=0.34.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.11.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
